Fix the dropdown z-index.

--- a/src/styles/projects/Projects.module.css
+++ b/src/styles/projects/Projects.module.css
@@ -274,6 +274,7 @@
     .Card.Holdu:hover,
     .Card.Doji-lite:hover {
         transform: none;
+        z-index: 10;
         /* Disable zoom effect */
     }
 }
